--- a/index.html
+++ b/index.html
@@ -35,64 +35,75 @@
   <div id="results"></div>
 
   <script>
-    const data = /* INSERT JSON DATA HERE (see below) */;
+    let data = [];
 
-    let searchInput = document.getElementById("searchBox");
-    let resultsDiv = document.getElementById("results");
+    fetch("rfp_data_with_real_embeddings.json")
+      .then(res => res.json())
+      .then(json => {
+        data = json;
+        setupSearch(); // wait until data is loaded
+      });
 
-    function cosineSimilarity(a, b) {
-      let dot = 0, normA = 0, normB = 0;
-      for (let i = 0; i < a.length; i++) {
-        dot += a[i] * b[i];
-        normA += a[i] ** 2;
-        normB += b[i] ** 2;
+    function setupSearch() {
+      const searchInput = document.getElementById("searchBox");
+      const resultsDiv = document.getElementById("results");
+
+      function cosineSimilarity(a, b) {
+        let dot = 0, normA = 0, normB = 0;
+        for (let i = 0; i < a.length; i++) {
+          dot += a[i] * b[i];
+          normA += a[i] ** 2;
+          normB += b[i] ** 2;
+        }
+        return dot / (Math.sqrt(normA) * Math.sqrt(normB));
       }
-      return dot / (Math.sqrt(normA) * Math.sqrt(normB));
-    }
 
-    function fakeEmbed(text) {
-      let seed = Math.abs(Array.from(text).reduce((a, c) => a + c.charCodeAt(0), 0)) % 1000000;
-      let rng = mulberry32(seed);
-      return Array(1536).fill(0).map(() => rng());
-    }
-
-    function mulberry32(a) {
-      return function() {
-        var t = a += 0x6D2B79F5;
-        t = Math.imul(t ^ t >>> 15, t | 1);
-        t ^= t + Math.imul(t ^ t >>> 7, t | 61);
-        return ((t ^ t >>> 14) >>> 0) / 4294967296;
+      function fakeEmbed(text) {
+        let seed = Math.abs(Array.from(text).reduce((a, c) => a + c.charCodeAt(0), 0)) % 1000000;
+        let rng = mulberry32(seed);
+        return Array(1536).fill(0).map(() => rng());
       }
+
+      function mulberry32(a) {
+        return function () {
+          var t = a += 0x6D2B79F5;
+          t = Math.imul(t ^ t >>> 15, t | 1);
+          t ^= t + Math.imul(t ^ t >>> 7, t | 61);
+          return ((t ^ t >>> 14) >>> 0) / 4294967296;
+        };
+      }
+
+      function search(query) {
+        let queryVec = fakeEmbed(query);
+        return data
+          .map(entry => {
+            const keywordScore = entry.question.toLowerCase().includes(query.toLowerCase()) ? 1 : 0;
+            const vectorScore = cosineSimilarity(queryVec, entry.embedding);
+            const score = vectorScore + keywordScore * 3;
+            return Object.assign({}, entry, { score, keywordScore });
+          })
+          .filter(r => r.score > 0.1 && (r.keywordScore > 0 || r.score > 0.2))
+          .sort((a, b) => b.score - a.score)
+          .slice(0, 5);
+      }
+
+      searchInput.addEventListener("input", () => {
+        let query = searchInput.value.trim();
+        resultsDiv.innerHTML = "";
+        if (!query) return;
+
+        let results = search(query);
+        resultsDiv.innerHTML = results.map(function (r) {
+          return `
+            <div class="result">
+              <h4>Q: ${r.question}</h4>
+              <p><strong>Answer:</strong> ${r.answer}</p>
+              <p><small><em>Score: ${r.score.toFixed(3)}</em></small></p>
+            </div>
+          `;
+        }).join("");
+      });
     }
-
-    function search(query) {
-      let queryVec = fakeEmbed(query);
-      return data
-        .map(entry => {
-          const keywordScore = entry.question.toLowerCase().includes(query.toLowerCase()) ? 1 : 0;
-          const vectorScore = cosineSimilarity(queryVec, entry.embedding);
-          const score = vectorScore + keywordScore * 3;
-          return Object.assign({}, entry, { score, keywordScore });
-        })
-        .filter(r => r.score > 0.1 && (r.keywordScore > 0 || r.score > 0.2))
-        .sort((a, b) => b.score - a.score)
-        .slice(0, 5);
-    }
-
-    searchInput.addEventListener("input", () => {
-      let query = searchInput.value.trim();
-      resultsDiv.innerHTML = "";
-      if (!query) return;
-
-      let results = search(query);
-      resultsDiv.innerHTML = results.map(function(r) {
-        return `<div class="result">
-          <h4>Q: ${r.question}</h4>
-          <p><strong>Answer:</strong> ${r.answer}</p>
-          <p><small><em>Score: ${r.score.toFixed(3)}</em></small></p>
-        </div>`;
-      }).join("");
-    });
   </script>
 </body>
 </html>
