--- a/index.html
+++ b/index.html
@@ -2,53 +2,56 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AI-Powered RFP Question Search</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 20px;
-      background: #f9f9f9;
-    }
-    h1 {
-      text-align: center;
+      margin: 40px;
     }
     #search-box {
       width: 100%;
       padding: 12px;
       font-size: 16px;
-      margin-bottom: 20px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
+      margin-bottom: 24px;
+      border: 2px solid #4A90E2;
+      border-radius: 8px;
+      outline: none;
+    }
+    #search-box:focus {
+      border-color: #007BFF;
     }
     .card {
-      background: white;
-      border: 1px solid #ddd;
-      border-radius: 6px;
-      padding: 16px;
       margin-bottom: 20px;
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+      padding: 16px;
+      border: 1px solid #DDD;
+      border-radius: 6px;
+      background: #FFF;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
     }
-    .card strong {
-      display: block;
+    .card mark {
+      background-color: #FFFB91;
+    }
+    .card details summary {
+      cursor: pointer;
+      font-size: 14px;
+      margin-top: 8px;
       margin-bottom: 4px;
     }
-    .card em {
-      color: #777;
-      font-size: 0.85em;
+    .card ul {
+      margin: 0;
+      padding-left: 20px;
+    }
+    .card small {
+      color: #666;
+      font-style: italic;
     }
   </style>
-
-  <!-- Load SentenceTransformers (fallback mode for client-side embedding if used) -->
-  <script src="https://cdn.jsdelivr.net/npm/sentence-transformers"></script>
 </head>
 <body>
   <h1>AI-Powered RFP Question Search</h1>
   <input type="text" id="search-box" placeholder="Type your RFP question..." />
   <div id="results"></div>
-
   <script src="script.js"></script>
 </body>
 </html>
